[package]
name = "hybrid_signature_scheme"
version = "0.1.0"
authors = ["Peter Willemsen <peter@codebuffet.co>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
falcon = ["pqcrypto-falcon", "pqcrypto-traits"]

[dev-dependencies]
hex = "0.4.3"

[dependencies]
pqcrypto-falcon = { path = "./pqcrypto/pqcrypto-falcon", optional = true }
saber = { git = "https://github.com/Tanglehub/temporary-saber-rs.git", optional = true }
pqcrypto-traits = { path = "./pqcrypto/pqcrypto-traits", optional = true }
ed25519-zebra = { version = "3.0.0", optional = true }
rand = "0.8.3"
getrandom = "0.2"
hex-literal = "0.3.4"
test-log = "0.2.8"
log = "0.4.14"
env_logger = "0.9.0"
blake3 = "1.3.1"